# edb-tool

./: Cargo.toml  LICENSE  README.md
src/: app.rs  edb.rs  main.rs  task.rs  taskcard.rs  tasklist.rs  ui.rs
src/snapshots/: edb__tasklist__tests__view_several_tasks_at_eight_scroll.snap  edb__tasklist__tests__view_several_tasks_at_five_scroll.snap  edb__tasklist__tests__view_several_tasks_at_ten_scroll.snap  edb__tasklist__tests__view_several_tasks_at_zero_scroll.snap
