[package]
name = "edb"
version = "0.1.0"
description = "Engineering day book"
authors = ["Trevor Keegan <positev@outlook.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.30.0"
tokio = { version = "1.40.0", features = ["full"] }
color-eyre = "0.6.3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
insta = "1.46.3"
